refactor: ci pipeline workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,71 +17,111 @@ env:
   TAURI_FRONTEND_PATH: ${{ github.workspace }}/webapp
 
 jobs:
-  lint:
+  webapp-build:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
 
-      - name: Setup Tauri
-        uses: ./.github/actions/setup-tauri
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4.1.0
         with:
-          rust-version: ${{ env.RUST_VERSION }}
-          node-version: ${{ env.NODE_VERSION }}
-          pnpm-version: ${{ env.PNPM_VERSION }}
+          version: ${{ env.PNPM_VERSION }}
 
-      - name: Run ESLint
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.4.0
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+          cache-dependency-path: webapp/pnpm-lock.yaml
+
+      - name: Install dependencies
+        working-directory: ${{ env.TAURI_FRONTEND_PATH }}
+        run: pnpm install --frozen-lockfile
+
+      - name: Run lint
         continue-on-error: true
-        run: |
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" install --frozen-lockfile
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" lint
+        working-directory: ${{ env.TAURI_FRONTEND_PATH }}
+        run: pnpm lint
 
-      - name: Run Clippy
+      - name: Run tests
+        working-directory: ${{ env.TAURI_FRONTEND_PATH }}
+        run: pnpm test run --passWithNoTests
+
+      - name: Build webapp
+        working-directory: ${{ env.TAURI_FRONTEND_PATH }}
+        run: pnpm build:ui
+
+      - name: Upload webapp artifact
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: webapp-dist
+          path: ${{ env.TAURI_FRONTEND_PATH }}/dist
+
+  rust-build:
+    runs-on: ubuntu-24.04
+    needs: webapp-build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.2.2
+
+      - name: Download webapp artifact
+        uses: actions/download-artifact@v5.0.0
+        with:
+          name: webapp-dist
+          path: ${{ env.TAURI_FRONTEND_PATH }}/dist
+
+      - name: Setup tauri dependencies
+        run: |
+          sudo apt update
+          sudo apt install libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev jq
+
+      - name: Rust toolchain setup
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4.2.3
+        with:
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+
+      - name: Run format
         continue-on-error: true
+        run: cargo fmt --all -- --check
+
+      - name: Run lint
+        continue-on-error: true
+        run: cargo clippy --all-targets --all-features
+
+      - name: Run lint
+        run: cargo test --all-targets --all-features
+
+      - name: Prepare configuration
         run: |
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" build:ui
-          cargo clippy --all-targets --all-features
+          cargo install tauri-cli --locked
+          jq '.build.beforeBuildCommand = ""' tauri.conf.json > tauri.conf.tmp
+          mv tauri.conf.tmp tauri.conf.json
 
-  test:
-    runs-on: ubuntu-24.04
-    needs: [lint]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.2.2
+      - name: Run build for linux
+        run: cargo tauri build
 
-      - name: Setup Tauri
-        uses: ./.github/actions/setup-tauri
-        with:
-          rust-version: ${{ env.RUST_VERSION }}
-          node-version: ${{ env.NODE_VERSION }}
-          pnpm-version: ${{ env.PNPM_VERSION }}
-
-      - name: Run vitest
+      - name: Prepare windows environment
         run: |
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" install --frozen-lockfile
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" test run --passWithNoTests
+          sudo apt install -y  nsis lld llvm clang cmake ninja-build nasm
+          rustup target add x86_64-pc-windows-msvc
+          cargo install --locked cargo-xwin
 
-      - name: Run cargo tests
+      - name: Run build for windows
         run: |
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" build:ui
-          cargo test --all-targets --all-features
-
-  build:
-    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-24.04
-    needs: [test]
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.2.2
-
-      - name: Setup Tauri
-        uses: ./.github/actions/setup-tauri
-        with:
-          rust-version: ${{ env.RUST_VERSION }}
-          node-version: ${{ env.NODE_VERSION }}
-          pnpm-version: ${{ env.PNPM_VERSION }}
+          cargo tauri build --runner cargo-xwin --target x86_64-pc-windows-msvc
 
       - name: Setup version
         id: setup_version
@@ -102,21 +142,6 @@ jobs:
 
       - name: Print revision
         run: echo "Revision is ${{ steps.setup_version.outputs.revision }}"
-
-      - name: Run build for linux
-        run: |
-          pnpm --dir="$GITHUB_WORKSPACE/webapp" install --frozen-lockfile
-          cargo tauri build
-
-      - name: Prepare windows environment
-        run: |
-          sudo apt install -y  nsis lld llvm clang cmake ninja-build nasm
-          rustup target add x86_64-pc-windows-msvc
-          cargo install --locked cargo-xwin
-
-      - name: Run build for windows
-        run: |
-          cargo tauri build --runner cargo-xwin --target x86_64-pc-windows-msvc
 
       - name: Move build artifacts
         run: |
