--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -96,7 +96,7 @@ jobs:
 
   webapp-build:
     runs-on: ubuntu-24.04
-    needs: [webapp-lint, webapp-tests]
+    needs: webapp-tests
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
@@ -127,9 +127,51 @@ jobs:
           name: webapp-dist
           path: ${{ env.TAURI_FRONTEND_PATH }}/dist
 
+  rust-install-dependencies:
+    runs-on: ${{ matrix.os }}
+    needs: webapp-build
+    strategy:
+      matrix:
+        os: [ubuntu-24.04, windows-2022]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.2.2
+
+      - name: Download webapp artifact
+        uses: actions/download-artifact@v5.0.0
+        with:
+          name: webapp-dist
+          path: ${{ env.TAURI_FRONTEND_PATH }}/dist
+
+      - name: Setup tauri dependencies
+        if: matrix.os == 'ubuntu-24.04'
+        run: |
+          sudo apt update
+          sudo apt install libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
+
+      - name: Rust toolchain setup
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
+          components: clippy
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4.2.3
+        with:
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry
+            ~/.cargo/git
+            target/
+
+      - name: Install dependencies
+        run: cargo fetch --locked
+
   rust-lint:
     runs-on: ubuntu-24.04
-    needs: webapp-build
+    needs: rust-install-dependencies
     continue-on-error: true
     steps:
       - name: Checkout repository
@@ -168,7 +210,7 @@ jobs:
 
   rust-tests:
     runs-on: ${{ matrix.os }}
-    needs: webapp-build
+    needs: rust-install-dependencies
     strategy:
       matrix:
         os: [ubuntu-24.04, windows-2022]
