--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -334,7 +334,8 @@ jobs:
           cp ${{ github.workspace }}/target/linux/appimage/*.AppImage dist/appimage/unichat-$VERSION.AppImage
           cp ${{ github.workspace }}/target/linux/deb/*.deb dist/deb/unichat-$VERSION.deb
           cp ${{ github.workspace }}/target/linux/rpm/*.rpm dist/rpm/unichat-$VERSION.rpm
-          cp ${{ github.workspace }}/target/windows/nsis/*.exe dist/windows/unichat-$VERSION.exe
+          cp ${{ github.workspace }}/target/windows/nsis/*.exe dist/nsis/unichat-$VERSION-setup.exe
+          cp ${{ github.workspace }}/target/windows/msi/*.msi dist/msi/unichat-$VERSION-setup.msi
           for folder in dist/*; do
             if [ -d "$folder" ]; then
               (cd "$folder" && for file in ./*; do sha256sum "$file" > "${file}.sha256"; done)
