--- a/.github/actions/upload-artifact/action.yml
+++ b/.github/actions/upload-artifact/action.yml
@@ -29,25 +29,22 @@ runs:
         if [ -d "${{ inputs.base-folder }}/nsis" ]; then
           echo "nsis=true" >> $GITHUB_OUTPUT
         fi
-        if [ -d "${{ inputs.base-folder }}/msi" ]; then
-          echo "msi=true" >> $GITHUB_OUTPUT
-        fi
 
-    - name: Upload to GitHub Actions - AppImage artifacts
+    - name: Upload to GitHub Actions - Linux AppImage artifacts
       if: ${{ steps.check_folders.outputs.appimage == 'true' }}
       uses: actions/upload-artifact@v4.6.2
       with:
         name: ${{ inputs.prefix }}-appimage
         path: ${{ inputs.base-folder }}/appimage
 
-    - name: Upload to GitHub Actions - DEB artifacts
+    - name: Upload to GitHub Actions - Linux DEB artifacts
       if: ${{ steps.check_folders.outputs.deb == 'true' }}
       uses: actions/upload-artifact@v4.6.2
       with:
         name: ${{ inputs.prefix }}-deb
         path: ${{ inputs.base-folder }}/deb
 
-    - name: Upload to GitHub Actions - RPM artifacts
+    - name: Upload to GitHub Actions - Linux RPM artifacts
       if: ${{ steps.check_folders.outputs.rpm == 'true' }}
       uses: actions/upload-artifact@v4.6.2
       with:
@@ -60,13 +57,6 @@ runs:
       with:
         name: ${{ inputs.prefix }}-nsis
         path: ${{ inputs.base-folder }}/nsis
-
-    - name: Upload to GitHub Actions - Windows MSI artifacts
-      if: ${{ steps.check_folders.outputs.msi == 'true' }}
-      uses: actions/upload-artifact@v4.6.2
-      with:
-        name: ${{ inputs.prefix }}-msi
-        path: ${{ inputs.base-folder }}/msi
 
     - name: Upload to GitHub Release
       if: github.event_name == 'release'
