--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -141,7 +141,9 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
+      # Runs cache only on ubuntu, windows runners looks too slow
       - name: Cache cargo registry
+        if: matrix.os == 'ubuntu-24.04'
         uses: actions/cache@v4.2.3
         with:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
@@ -180,7 +182,9 @@ jobs:
           toolchain: ${{ env.RUST_VERSION }}
           components: clippy
 
+      # Runs cache only on ubuntu, windows runners looks too slow
       - name: Cache cargo registry
+        if: matrix.os == 'ubuntu-24.04'
         uses: actions/cache@v4.2.3
         with:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
@@ -221,7 +225,9 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
+      # Runs cache only on ubuntu, windows runners looks too slow
       - name: Cache cargo registry
+        if: matrix.os == 'ubuntu-24.04'
         uses: actions/cache@v4.2.3
         with:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
@@ -262,7 +268,9 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
+      # Runs cache only on ubuntu, windows runners looks too slow
       - name: Cache cargo registry
+        if: matrix.os == 'ubuntu-24.04'
         uses: actions/cache@v4.2.3
         with:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
