--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -127,11 +127,9 @@ jobs:
           name: webapp-dist
           path: ${{ env.TAURI_FRONTEND_PATH }}/dist
 
+  # Runs cache only on ubuntu, windows runners looks too slow
   rust-install-dependencies:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-24.04, windows-2022]
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
@@ -141,9 +139,7 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
-      # Runs cache only on ubuntu, windows runners looks too slow
       - name: Cache cargo registry
-        if: matrix.os == 'ubuntu-24.04'
         uses: actions/cache@v4.2.3
         with:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
