--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -191,6 +191,9 @@ jobs:
             ${{ env.HOME }}/.cargo/git
             ${{ github.workspace }}/target
 
+      - name: Install dependencies
+        run: cargo fetch --locked
+
       - name: Run lint
         run: cargo clippy --all-targets --all-features
 
@@ -232,6 +235,9 @@ jobs:
             ${{ env.HOME }}/.cargo/git
             ${{ github.workspace }}/target
 
+      - name: Install dependencies
+        run: cargo fetch --locked
+
       - name: Run test
         run: cargo test --all-targets --all-features
 
@@ -272,6 +278,9 @@ jobs:
             ${{ env.HOME }}/.cargo/registry
             ${{ env.HOME }}/.cargo/git
             ${{ github.workspace }}/target
+
+      - name: Install dependencies
+        run: cargo fetch --locked
 
       - name: Prepare configuration
         run: |
