--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -339,7 +339,7 @@ jobs:
       - name: Move build artifacts
         run: |
           export VERSION="${{ steps.setup_version.outputs.revision }}"
-          mkdir -p dist/appimage dist/deb dist/rpm dist/windows
+          mkdir -p dist/appimage dist/deb dist/rpm dist/nsis dist/msi
           cp ${{ github.workspace }}/target/linux/appimage/*.AppImage dist/appimage/unichat-$VERSION.AppImage
           cp ${{ github.workspace }}/target/linux/deb/*.deb dist/deb/unichat-$VERSION.deb
           cp ${{ github.workspace }}/target/linux/rpm/*.rpm dist/rpm/unichat-$VERSION.rpm
