--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -328,6 +328,8 @@ jobs:
     runs-on: ubuntu-24.04
     needs: package
     if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
