--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rand = "0.9.2"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
+serde_plain = "1.0.2"
 tauri = { version = "2.7.0", features = [] }
 tauri-plugin-log = "2.6.0"
 tauri-plugin-opener = "2.4.0"
