--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -386,7 +386,7 @@ jobs:
         run: |
           if [ -n "$(command -v gh)" ]; then
             echo "GitHub CLI is installed. Proceeding with to create a GitHub Release."
-            echo "${{ inputs.GITHUB_TOKEN }}" | gh auth login --with-token
+            echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
             for folder in ${{ github.workspace }}/dist/*; do
               if [ -d "$folder" ] && [ "$(ls -A "$folder")" ]; then
                 echo "Uploading files from: $folder"
