--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,23 @@ edition = "2021"
 custom-protocol = ["tauri/custom-protocol"]
 
 [build-dependencies]
+rustls = "0.23.31"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 tauri-build = { version = "2.4.0", features = [] }
-ureq = { version = "3.0.12", features = ["json", "rustls"] }
+ureq = { version = "3.1.0", default-features = false, features = ["json", "rustls-no-provider"] }
 
 [dependencies]
 actix-web = "4.11.0"
 actix-ws = "0.3.0"
 futures = "0.3.31"
 infer = "0.19.0"
-irc = { version = "1.1.0", default-features = false, features = ["encoding", "serde", "rustls-native-certs", "tokio-rustls"] }
+irc = { version = "1.1.0", default-features = false, features = ["encoding", "serde", "tls-rust"] }
 log = "0.4.27"
 moka = { version = "0.12.10", features = ["sync"] }
 rand = "0.9.2"
 regex = "1.11.1"
+rustls = "0.23.31"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 serde_plain = "1.0.2"
@@ -37,4 +39,4 @@ tauri-plugin-log = "2.6.0"
 tauri-plugin-opener = "2.5.0"
 tauri-plugin-store = "2.4.0"
 tokio = { version = "1.47.1", features = ["full"] }
-ureq = { version = "3.1.0", features = ["json", "rustls"] }
+ureq = { version = "3.1.0", default-features = false, features = ["json", "rustls-no-provider"] }
