--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,6 +30,7 @@
         "@tauri-apps/plugin-opener": "2.5.0",
         "clsx": "2.1.1",
         "marked": "16.2.0",
+        "mitt": "3.0.1",
         "polished": "4.3.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
