--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,13 @@ futures = "0.3.31"
 infer = "0.19.0"
 irc = { version = "1.1.0", default-features = false, features = ["encoding", "serde", "tls-native"] }
 log = "0.4.28"
+mlua = { version = "0.11.5", features = ["lua54", "vendored", "serde"] }
 moka = { version = "0.12.11", features = ["sync"] }
 rand = "0.9.2"
 regex = "1.12.2"
+semver = "1.0.27"
 serde = { version = "1.0.228", features = ["derive"] }
+serde-saphyr = "0.0.10"
 serde_json = "1.0.145"
 serde_plain = "1.0.2"
 tauri = { version = "2.8.5", features = ["native-tls"] }
