--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -325,7 +325,7 @@ jobs:
           path: ${{ github.workspace }}/target/release/bundle
 
   publish:
-    if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-24.04
     needs: package
     permissions:
