--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,6 +26,7 @@
         "@mantine/notifications": "8.3.9",
         "@tabler/icons-react": "3.35.0",
         "@tauri-apps/api": "2.9.1",
+        "@tauri-apps/plugin-dialog": "2.4.2",
         "@tauri-apps/plugin-log": "2.7.1",
         "@tauri-apps/plugin-opener": "2.5.2",
         "clsx": "2.1.1",
